--- a/src/atlasbridge/dashboard/templates/settings.html
+++ b/src/atlasbridge/dashboard/templates/settings.html
@@ -74,7 +74,7 @@
 </table>
 </div>
 
-{% if settings.capabilities %}
+{% if edition == "enterprise" and settings.capabilities %}
 <h2>Capabilities</h2>
 <div class="table-responsive">
 <table>
